--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 </div>
               </div>
               <div class="image-div">
-                <img src="src/webp/Group 76.webp.png" alt="Pexelicon website preview image" />
+                <img src="src/webp/Group 76.webp.webp" alt="Pexelicon website preview image" />
               </div>
             </div>
           </div>
